Changed icon and naming of few presets

--- a/WC总览/总览框架 （精简版）.yaml
+++ b/WC总览/总览框架 （精简版）.yaml
@@ -263,7 +263,7 @@ tabSetup:
         - <color=0xFFFFFF66>✜ 目标：所有无人机（+铁骑）</color>
   - - 3
     - - - bracket
-        - ⌘ 图标：作战/目标/友军（+无人机）
+        - ⌘ 图标：生产
       - - color
         - null
       - - name
@@ -294,7 +294,7 @@ tabSetup:
       - - color
         - null
       - - name
-        - <color=0xFFFF0000><b><fontsize=13> ☠ </fontsize></b></color>
+        - <color=0xFFFF0000><b><fontsize=13> ♠ </fontsize></b></color>
       - - overview
         - <color=0xFFFF6666>✯ 作战：移动反诱导</color>
 userSettings: []
