--- a/WC总览一键懒人版（自用，未必适合每个人）.yaml
+++ b/WC总览一键懒人版（自用，未必适合每个人）.yaml
@@ -74,10 +74,10 @@ flagOrder:
 - 53
 - 19
 - 18
-- 49
 - 10
 - 17
 - 48
+- 49
 - 21
 - 20
 - 66
@@ -904,7 +904,7 @@ presets:
         - 2017
         - 4088
         - 4107
-- - <color=0xFF33FFFF>☭ 生产：异常</color>
+- - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 +NPC）</color>
   - - - alwaysShownStates
       - []
     - - filteredStates
@@ -913,12 +913,10 @@ presets:
         - 14
         - 15
         - 16
-        - 21
         - 45
         - 49
     - - groups
       - - 6
-        - 9
         - 10
         - 12
         - 15
@@ -930,23 +928,19 @@ presets:
         - 30
         - 31
         - 90
-        - 99
         - 180
         - 185
         - 237
-        - 279
         - 286
         - 287
-        - 297
-        - 298
         - 306
         - 310
-        - 319
         - 324
         - 335
         - 337
         - 358
         - 361
+        - 365
         - 366
         - 380
         - 381
@@ -1085,7 +1079,6 @@ presets:
         - 759
         - 760
         - 761
-        - 784
         - 789
         - 790
         - 791
@@ -1131,8 +1124,6 @@ presets:
         - 832
         - 833
         - 834
-        - 835
-        - 836
         - 843
         - 844
         - 845
@@ -1298,7 +1289,24 @@ presets:
         - 1766
         - 1767
         - 1768
+        - 1788
+        - 1789
+        - 1790
+        - 1791
+        - 1792
+        - 1793
+        - 1794
+        - 1795
+        - 1796
+        - 1797
+        - 1798
+        - 1799
+        - 1800
         - 1803
+        - 1804
+        - 1805
+        - 1806
+        - 1807
         - 1813
         - 1814
         - 1876
@@ -1316,19 +1324,25 @@ presets:
         - 1929
         - 1956
         - 1972
+        - 1981
+        - 1982
         - 1991
+        - 1997
         - 2001
+        - 2009
         - 2015
         - 2016
         - 2017
         - 2020
         - 4028
+        - 4033
         - 4034
         - 4035
         - 4036
         - 4037
         - 4053
-        - 4073
+        - 4079
+        - 4081
         - 4088
         - 4093
         - 4107
@@ -3307,7 +3321,7 @@ presets:
         - 863
         - 864
         - 1538
-- - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 +NPC）</color>
+- - <color=0xFF33FFFF>☭ 生产：异常</color>
   - - - alwaysShownStates
       - []
     - - filteredStates
@@ -3316,10 +3330,12 @@ presets:
         - 14
         - 15
         - 16
+        - 21
         - 45
         - 49
     - - groups
       - - 6
+        - 9
         - 10
         - 12
         - 15
@@ -3331,19 +3347,23 @@ presets:
         - 30
         - 31
         - 90
+        - 99
         - 180
         - 185
         - 237
+        - 279
         - 286
         - 287
+        - 297
+        - 298
         - 306
         - 310
+        - 319
         - 324
         - 335
         - 337
         - 358
         - 361
-        - 365
         - 366
         - 380
         - 381
@@ -3482,6 +3502,7 @@ presets:
         - 759
         - 760
         - 761
+        - 784
         - 789
         - 790
         - 791
@@ -3527,6 +3548,8 @@ presets:
         - 832
         - 833
         - 834
+        - 835
+        - 836
         - 843
         - 844
         - 845
@@ -3692,24 +3715,7 @@ presets:
         - 1766
         - 1767
         - 1768
-        - 1788
-        - 1789
-        - 1790
-        - 1791
-        - 1792
-        - 1793
-        - 1794
-        - 1795
-        - 1796
-        - 1797
-        - 1798
-        - 1799
-        - 1800
         - 1803
-        - 1804
-        - 1805
-        - 1806
-        - 1807
         - 1813
         - 1814
         - 1876
@@ -3727,25 +3733,19 @@ presets:
         - 1929
         - 1956
         - 1972
-        - 1981
-        - 1982
         - 1991
-        - 1997
         - 2001
-        - 2009
         - 2015
         - 2016
         - 2017
         - 2020
         - 4028
-        - 4033
         - 4034
         - 4035
         - 4036
         - 4037
         - 4053
-        - 4079
-        - 4081
+        - 4073
         - 4088
         - 4093
         - 4107
@@ -9944,7 +9944,11 @@ stateColorsNameList:
   - orange
 - - background_9
   - orange
+- - flag_45
+  - darkBlue
 - - flag_48
+  - white
+- - flag_49
   - white
 tabSetup:
 - - 0
