--- a/WC总览一键懒人版（自用，未必适合每个人）.yaml
+++ b/WC总览一键懒人版（自用，未必适合每个人）.yaml
@@ -367,6 +367,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFF66CCFF>✪ 友军：拦截</color>
     - - - alwaysShownStates
         - - 11
@@ -757,9 +758,7 @@ presets:
           - 1202
           - 1246
           - 1247
-          - 1249
           - 1250
-          - 1275
           - 1276
           - 1283
           - 1305
@@ -782,8 +781,6 @@ presets:
           - 2016
           - 2017
           - 4088
-          - 4093
-          - 4107
   - - <color=0xFFFFFF66>✜ 目标：指挥驱逐舰</color>
     - - - alwaysShownStates
         - []
@@ -883,8 +880,6 @@ presets:
           - 1149
           - 1201
           - 1202
-          - 1249
-          - 1275
           - 1283
           - 1305
           - 1404
@@ -903,7 +898,6 @@ presets:
           - 2016
           - 2017
           - 4088
-          - 4107
   - - <color=0xFF33FFFF>☭ 生产：异常</color>
     - - - alwaysShownStates
         - []
@@ -933,6 +927,7 @@ presets:
           - 99
           - 180
           - 185
+          - 186
           - 237
           - 279
           - 286
@@ -1332,6 +1327,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFF6666>✯ 作战：可部署装置</color>
     - - - alwaysShownStates
         - []
@@ -1371,6 +1367,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFF6666>✯ 作战：非舰队成员</color>
     - - - alwaysShownStates
         - []
@@ -1583,6 +1580,7 @@ presets:
           - 1201
           - 1202
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1273
@@ -1616,6 +1614,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFD96CF>※ D-Scan：收割（-无人机）</color>
     - - - alwaysShownStates
         - []
@@ -1671,9 +1670,7 @@ presets:
           - 1202
           - 1246
           - 1247
-          - 1249
           - 1250
-          - 1275
           - 1276
           - 1283
           - 1305
@@ -1693,8 +1690,6 @@ presets:
           - 2016
           - 2017
           - 4088
-          - 4093
-          - 4107
   - - <color=0xFF33FFFF>☭ 生产：任务</color>
     - - - alwaysShownStates
         - []
@@ -1724,6 +1719,7 @@ presets:
           - 99
           - 180
           - 185
+          - 186
           - 226
           - 237
           - 279
@@ -2130,6 +2126,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：指挥舰/T3C</color>
     - - - alwaysShownStates
         - []
@@ -2636,6 +2633,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 -NPC）</color>
     - - - alwaysShownStates
         - []
@@ -2709,6 +2707,7 @@ presets:
           - 1201
           - 1202
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1273
@@ -2740,6 +2739,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：后勤</color>
     - - - alwaysShownStates
         - []
@@ -2850,6 +2850,7 @@ presets:
           - 180
           - 182
           - 185
+          - 186
           - 237
           - 279
           - 286
@@ -3272,6 +3273,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：战列舰</color>
     - - - filteredStates
         - - 11
@@ -3749,6 +3751,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFF33FFFF>☭ 生产：打捞/残骸</color>
     - - - alwaysShownStates
         - []
@@ -3800,6 +3803,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFF6666>✯ 作战：建筑</color>
     - - - alwaysShownStates
         - []
@@ -4004,6 +4008,7 @@ presets:
           - 4081
           - 4093
           - 4107
+          - 4137
   - - <color=0xFF33FFFF>☭ 生产：挖矿（所有）</color>
     - - - alwaysShownStates
         - []
@@ -4330,6 +4335,7 @@ presets:
           - 1202
           - 1207
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1252
@@ -4337,6 +4343,7 @@ presets:
           - 1259
           - 1262
           - 1265
+          - 1273
           - 1274
           - 1275
           - 1276
@@ -4472,6 +4479,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：无畏</color>
     - - - filteredStates
         - - 11
@@ -4584,6 +4592,7 @@ presets:
           - 1201
           - 1202
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1273
@@ -4602,6 +4611,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFF66CCFF>✪ 友军：大航/泰坦</color>
     - - - alwaysShownStates
         - - 11
@@ -4767,6 +4777,7 @@ presets:
           - 1201
           - 1202
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1273
@@ -4793,6 +4804,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：拦截</color>
     - - - filteredStates
         - - 11
@@ -4836,6 +4848,7 @@ presets:
           - 180
           - 182
           - 185
+          - 186
           - 237
           - 279
           - 286
@@ -5266,6 +5279,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFD96CF>※ --- D-Scan：所有</color>
     - - - alwaysShownStates
         - []
@@ -5342,7 +5356,6 @@ presets:
           - 1211
           - 1246
           - 1247
-          - 1249
           - 1250
           - 1275
           - 1276
@@ -5364,8 +5377,6 @@ presets:
           - 2016
           - 2017
           - 4088
-          - 4093
-          - 4107
   - - <color=0xFFFFFF66>✜ 目标：巡洋舰</color>
     - - - alwaysShownStates
         - []
@@ -5651,6 +5662,7 @@ presets:
           - 1202
           - 1207
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1252
@@ -5739,6 +5751,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：护卫/驱逐</color>
     - - - alwaysShownStates
         - []
@@ -6013,7 +6026,7 @@ presets:
           - 1972
           - 2001
           - 4088
-  - - <color=0xFFFF6666>✯ 作战：移动反诱导</color>
+  - - <color=0xFFFFFF66>✜ 目标：移动反诱导 (!)</color>
     - - - alwaysShownStates
         - []
       - - filteredStates
@@ -6340,6 +6353,7 @@ presets:
           - 1202
           - 1207
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1252
@@ -6347,6 +6361,7 @@ presets:
           - 1259
           - 1262
           - 1265
+          - 1273
           - 1274
           - 1275
           - 1276
@@ -6476,6 +6491,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFCCFF>✈ --- 航行：所有</color>
     - - - alwaysShownStates
         - []
@@ -6703,6 +6719,7 @@ presets:
           - 1201
           - 1202
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1273
@@ -6734,6 +6751,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFCCFF>✈ 航行（+舰船 -空间站）</color>
     - - - alwaysShownStates
         - []
@@ -7273,6 +7291,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFF66CCFF>✪ 友军：侦察</color>
     - - - alwaysShownStates
         - - 11
@@ -7513,6 +7532,7 @@ presets:
           - 1201
           - 1202
           - 1246
+          - 1247
           - 1249
           - 1250
           - 1252
@@ -7594,6 +7614,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：大航</color>
     - - - filteredStates
         - - 11
@@ -8495,366 +8516,7 @@ presets:
           - 4088
           - 4093
           - 4107
-  - - ⌘ 图标：入侵
-    - - - alwaysShownStates
-        - []
-      - - filteredStates
-        - - 21
-      - - groups
-        - - 6
-          - 10
-          - 12
-          - 15
-          - 25
-          - 26
-          - 27
-          - 28
-          - 29
-          - 30
-          - 31
-          - 100
-          - 180
-          - 182
-          - 185
-          - 237
-          - 279
-          - 286
-          - 287
-          - 288
-          - 301
-          - 306
-          - 310
-          - 319
-          - 324
-          - 324
-          - 337
-          - 358
-          - 365
-          - 366
-          - 380
-          - 381
-          - 383
-          - 419
-          - 420
-          - 435
-          - 446
-          - 463
-          - 485
-          - 494
-          - 495
-          - 496
-          - 513
-          - 520
-          - 522
-          - 523
-          - 527
-          - 533
-          - 534
-          - 540
-          - 541
-          - 543
-          - 544
-          - 547
-          - 550
-          - 551
-          - 552
-          - 553
-          - 554
-          - 555
-          - 556
-          - 557
-          - 558
-          - 559
-          - 560
-          - 561
-          - 562
-          - 563
-          - 564
-          - 565
-          - 566
-          - 567
-          - 568
-          - 569
-          - 570
-          - 571
-          - 572
-          - 573
-          - 574
-          - 575
-          - 576
-          - 577
-          - 578
-          - 579
-          - 580
-          - 581
-          - 582
-          - 583
-          - 584
-          - 593
-          - 594
-          - 595
-          - 596
-          - 597
-          - 602
-          - 603
-          - 604
-          - 605
-          - 606
-          - 611
-          - 612
-          - 613
-          - 614
-          - 615
-          - 620
-          - 621
-          - 622
-          - 623
-          - 624
-          - 629
-          - 630
-          - 631
-          - 632
-          - 633
-          - 639
-          - 640
-          - 641
-          - 659
-          - 665
-          - 666
-          - 667
-          - 668
-          - 669
-          - 670
-          - 671
-          - 672
-          - 673
-          - 674
-          - 675
-          - 676
-          - 677
-          - 678
-          - 679
-          - 680
-          - 681
-          - 682
-          - 683
-          - 684
-          - 685
-          - 686
-          - 687
-          - 688
-          - 689
-          - 690
-          - 691
-          - 692
-          - 693
-          - 694
-          - 695
-          - 696
-          - 697
-          - 698
-          - 699
-          - 700
-          - 701
-          - 702
-          - 703
-          - 704
-          - 705
-          - 706
-          - 755
-          - 756
-          - 757
-          - 758
-          - 759
-          - 760
-          - 761
-          - 784
-          - 789
-          - 790
-          - 791
-          - 792
-          - 793
-          - 794
-          - 795
-          - 796
-          - 797
-          - 798
-          - 799
-          - 800
-          - 801
-          - 802
-          - 803
-          - 804
-          - 805
-          - 806
-          - 807
-          - 808
-          - 809
-          - 810
-          - 811
-          - 812
-          - 813
-          - 814
-          - 816
-          - 817
-          - 818
-          - 819
-          - 820
-          - 821
-          - 822
-          - 823
-          - 824
-          - 825
-          - 826
-          - 827
-          - 828
-          - 829
-          - 830
-          - 831
-          - 832
-          - 833
-          - 834
-          - 843
-          - 844
-          - 845
-          - 846
-          - 847
-          - 848
-          - 849
-          - 850
-          - 851
-          - 852
-          - 861
-          - 865
-          - 866
-          - 867
-          - 868
-          - 875
-          - 883
-          - 893
-          - 894
-          - 897
-          - 898
-          - 900
-          - 902
-          - 906
-          - 924
-          - 925
-          - 927
-          - 941
-          - 952
-          - 959
-          - 960
-          - 961
-          - 963
-          - 982
-          - 983
-          - 984
-          - 985
-          - 986
-          - 987
-          - 988
-          - 1006
-          - 1007
-          - 1022
-          - 1051
-          - 1052
-          - 1053
-          - 1054
-          - 1056
-          - 1166
-          - 1167
-          - 1168
-          - 1169
-          - 1174
-          - 1175
-          - 1176
-          - 1177
-          - 1178
-          - 1179
-          - 1180
-          - 1181
-          - 1182
-          - 1183
-          - 1184
-          - 1185
-          - 1186
-          - 1201
-          - 1202
-          - 1249
-          - 1252
-          - 1255
-          - 1259
-          - 1262
-          - 1265
-          - 1283
-          - 1288
-          - 1305
-          - 1307
-          - 1310
-          - 1404
-          - 1406
-          - 1408
-          - 1452
-          - 1453
-          - 1454
-          - 1455
-          - 1465
-          - 1527
-          - 1529
-          - 1530
-          - 1534
-          - 1537
-          - 1538
-          - 1548
-          - 1566
-          - 1567
-          - 1568
-          - 1652
-          - 1653
-          - 1657
-          - 1664
-          - 1665
-          - 1666
-          - 1667
-          - 1720
-          - 1721
-          - 1722
-          - 1724
-          - 1725
-          - 1726
-          - 1727
-          - 1728
-          - 1729
-          - 1731
-          - 1734
-          - 1735
-          - 1736
-          - 1737
-          - 1759
-          - 1761
-          - 1762
-          - 1895
-          - 1925
-          - 1926
-          - 1927
-          - 1928
-          - 1929
-          - 1956
-          - 1972
-          - 2001
-          - 2009
-          - 2016
-          - 2017
-          - 2020
-          - 4028
-          - 4034
-          - 4035
-          - 4036
-          - 4037
-          - 4053
-          - 4081
-          - 4093
+          - 4137
   - - <color=0xFF66CCFF>✪ 友军：所有旗舰（-大小鱼 -货舰）</color>
     - - - alwaysShownStates
         - - 11
@@ -9401,6 +9063,7 @@ presets:
           - 99
           - 180
           - 185
+          - 186
           - 237
           - 279
           - 286
@@ -9807,6 +9470,7 @@ presets:
           - 4088
           - 4093
           - 4107
+          - 4137
   - - <color=0xFFFFFF66>✜ 目标：隐轰 (!)</color>
     - - - alwaysShownStates
         - []
@@ -9984,7 +9648,7 @@ tabSetup:
       - - name
         - <color=0xFF33FFFF><b><fontsize=13> 生产 </fontsize></b></color>
       - - overview
-        - <color=0xFF33FFFF>☭ 生产：打捞/残骸</color>
+        - <color=0xFF33FFFF>☭ 生产：刷怪</color>
   - - 4
     - - - bracket
         - ⌘ 图标：作战/目标/友军（+无人机）
@@ -10011,5 +9675,5 @@ tabSetup:
       - - name
         - <color=0xFFFF0000><b><fontsize=13> 特殊 </fontsize></b></color>
       - - overview
-        - <color=0xFFFF6666>✯ 作战：移动反诱导</color>
+        - <color=0xFFFF6666>✯ 作战：隐秘行动</color>
 userSettings: []
