--- a/WC总览/总览框架.yaml
+++ b/WC总览/总览框架.yaml
@@ -245,7 +245,7 @@ tabSetup:
         - <color=0xFFFFCCFF>✈ 航行（-舰船 +空间站）</color>
   - - 1
     - - - bracket
-        - ⌘ 图标：作战/目标/友军（+无人机）
+        - ⌘ 图标：作战/目标/友军（+无人机 -残骸）
       - - color
         - null
       - - name
@@ -254,7 +254,7 @@ tabSetup:
         - <color=0xFFFF6666>✯ --- 作战：基本（+敌对 +NPC）</color>
   - - 2
     - - - bracket
-        - ⌘ 图标：作战/目标/友军（+无人机）
+        - ⌘ 图标：作战/目标/友军（+无人机 -残骸）
       - - color
         - null
       - - name
@@ -272,7 +272,7 @@ tabSetup:
         - <color=0xFF33FFFF>☭ 生产：打捞/残骸</color>
   - - 4
     - - - bracket
-        - ⌘ 图标：作战/目标/友军（+无人机）
+        - ⌘ 图标：作战/目标/友军（+无人机 -残骸）
       - - color
         - null
       - - name
@@ -290,7 +290,7 @@ tabSetup:
         - <color=0xFF66FF66>➲ 额外：跑蛋 (!)</color>
   - - 6
     - - - bracket
-        - ⌘ 图标：作战/目标/友军（+无人机）
+        - ⌘ 图标：作战/目标/友军（+无人机 -残骸）
       - - color
         - null
       - - name
