--- a/WC总览/总览框架.yaml
+++ b/WC总览/总览框架.yaml
@@ -299,6 +299,4 @@ tabSetup:
       - <color=0xFFFF0000><b><fontsize=13> ♠ 特殊 </fontsize></b></color>
     - - overview
       - <color=0xFFFFFF66>✜ 目标：移动反诱导 (!)</color>
-userSettings:
-- - showModuleHairlines
-  - false
+userSettings: []
