宣战同盟更新2

--- a/WC总览/总览作战包.yaml
+++ b/WC总览/总览作战包.yaml
@@ -2106,7 +2106,7 @@ stateColorsNameList:
   - - background_48
     - white
   - - background_49
-    - blue
+    - white
   - - background_50
     - orange
   - - background_51
