--- a/WC总览/总览核心.yaml
+++ b/WC总览/总览核心.yaml
@@ -3431,7 +3431,7 @@ stateColorsNameList:
   - - background_48
     - white
   - - background_49
-    - blue
+    - white
   - - background_50
     - orange
   - - background_51
