--- a/WC总览/总览生产包.yaml
+++ b/WC总览/总览生产包.yaml
@@ -3797,7 +3797,7 @@ stateColorsNameList:
   - - background_48
     - white
   - - background_49
-    - blue
+    - white
   - - background_50
     - orange
   - - background_51
