--- a/WC总览/总览框架 （精简版）.yaml
+++ b/WC总览/总览框架 （精简版）.yaml
@@ -1,25 +1,25 @@
 backgroundOrder:
-  - 13
-  - 44
-  - 52
   - 11
   - 12
   - 14
   - 15
   - 16
   - 45
-  - 49
-  - 19
-  - 18
-  - 9
+  - 13
+  - 44
+  - 52
   - 51
+  - 9
   - 50
   - 53
+  - 19
+  - 18
+  - 49
   - 10
-  - 20
-  - 21
   - 17
+  - 20
   - 48
+  - 21
   - 66
 backgroundStates:
   - 9
@@ -59,25 +59,25 @@ columnOrder:
   - TRANSVERSALVELOCITY
   - ANGULARVELOCITY
 flagOrder:
-  - 13
-  - 44
-  - 52
   - 11
   - 12
   - 14
   - 15
   - 16
   - 45
-  - 9
+  - 13
+  - 44
+  - 52
   - 51
+  - 9
   - 50
   - 53
   - 19
   - 18
+  - 49
   - 10
   - 17
   - 48
-  - 49
   - 21
   - 20
   - 66
@@ -116,6 +116,7 @@ overviewColumns:
 shipLabelOrder:
   - ship type
   - alliance
+  - linebreak
   - corporation
   - pilot name
   - ship name
@@ -142,7 +143,7 @@ shipLabels:
         - false
   - - alliance
     - - - post
-        - "]</color></fontsize>"
+        - "]</color></fontsize><color=0xFFFF6600>"
       - - pre
         - " <fontsize=14><color=0xFFCCCC33>["
       - - state
@@ -151,36 +152,55 @@ shipLabels:
         - alliance
   - - corporation
     - - - post
-        - "]</b></color></fontsize>"
+        - "]</b></color></fontsize><color=0xFFFF6600>"
       - - pre
         - " <fontsize=12><color=0xFFFFFFCC><b>["
       - - state
         - 1
       - - type
         - corporation
+  - - linebreak
+    - - - bold
+        - false
+      - - color
+        - null
+      - - fontsize
+        - null
+      - - italic
+        - false
+      - - post
+        - null
+      - - pre
+        - null
+      - - state
+        - null
+      - - type
+        - linebreak
+      - - underline
+        - false
   - - pilot name
     - - - post
-        - </b></color></fontsize><color=0xFFFF6600>
+        - "</b></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - " <fontsize=12><color=0xFFFFFFCC><b>"
+        - " <fontsize=12><color=0xFFFFFFFF><b>"
       - - state
         - 1
       - - type
         - pilot name
   - - ship name
     - - - post
-        - </i></color></fontsize>
+        - "</i></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - "<fontsize=12><color=0xFFFFFFCC><i> - "
+        - " <fontsize=11><color=0xFFFFFFCC><i>"
       - - state
         - 0
       - - type
         - ship name
   - - ship type
     - - - post
-        - </u></b></color></fontsize>
+        - "</u></b></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - <fontsize=14><color=0xFFFFCC66><b><u>
+        - " <fontsize=14><color=0xFFFFCC66><b><u>"
       - - state
         - 1
       - - type
@@ -283,13 +303,13 @@ tabSetup:
         - <color=0xFF66CCFF>✪ --- 友军：所有</color>
   - - 5
     - - - bracket
-        - ⌘ 图标：跑蛋 (!)
+        - ⌘ 图标：跑蛋（!）
       - - color
         - null
       - - name
         - <color=0xFF66FF66><b><fontsize=13> ➲ </fontsize></b></color>
       - - overview
-        - <color=0xFF66FF66>➲ 额外：跑蛋 (!)</color>
+        - <color=0xFF66FF66>➲ 额外：跑蛋（!）</color>
   - - 6
     - - - bracket
         - ⌘ 图标：作战/目标/友军（+无人机 -残骸）
@@ -298,5 +318,5 @@ tabSetup:
       - - name
         - <color=0xFFFF0000><b><fontsize=13> ♠ </fontsize></b></color>
       - - overview
-        - <color=0xFFFFFF66>✜ 目标：移动反诱导 (!)</color>
+        - <color=0xFFFFFF66>✜ 目标：移动反诱导（!）</color>
 userSettings: []
