--- a/WC总览/总览作战包.yaml
+++ b/WC总览/总览作战包.yaml
@@ -1,25 +1,25 @@
 backgroundOrder:
-  - 13
-  - 44
-  - 52
   - 11
   - 12
   - 14
   - 15
   - 16
   - 45
-  - 49
-  - 19
-  - 18
-  - 9
+  - 13
+  - 44
+  - 52
   - 51
+  - 9
   - 50
   - 53
+  - 19
+  - 18
+  - 49
   - 10
-  - 20
-  - 21
   - 17
+  - 20
   - 48
+  - 21
   - 66
 backgroundStates:
   - 9
@@ -59,25 +59,25 @@ columnOrder:
   - TRANSVERSALVELOCITY
   - ANGULARVELOCITY
 flagOrder:
-  - 13
-  - 44
-  - 52
   - 11
   - 12
   - 14
   - 15
   - 16
   - 45
-  - 9
+  - 13
+  - 44
+  - 52
   - 51
+  - 9
   - 50
   - 53
   - 19
   - 18
+  - 49
   - 10
   - 17
   - 48
-  - 49
   - 21
   - 20
   - 66
@@ -2000,6 +2000,7 @@ presets:
 shipLabelOrder:
   - ship type
   - alliance
+  - linebreak
   - corporation
   - pilot name
   - ship name
@@ -2026,7 +2027,7 @@ shipLabels:
         - false
   - - alliance
     - - - post
-        - "]</color></fontsize>"
+        - "]</color></fontsize><color=0xFFFF6600>"
       - - pre
         - " <fontsize=14><color=0xFFCCCC33>["
       - - state
@@ -2035,36 +2036,55 @@ shipLabels:
         - alliance
   - - corporation
     - - - post
-        - "]</b></color></fontsize>"
+        - "]</b></color></fontsize><color=0xFFFF6600>"
       - - pre
         - " <fontsize=12><color=0xFFFFFFCC><b>["
       - - state
         - 1
       - - type
         - corporation
+  - - linebreak
+    - - - bold
+        - false
+      - - color
+        - null
+      - - fontsize
+        - null
+      - - italic
+        - false
+      - - post
+        - null
+      - - pre
+        - null
+      - - state
+        - null
+      - - type
+        - linebreak
+      - - underline
+        - false
   - - pilot name
     - - - post
-        - </b></color></fontsize><color=0xFFFF6600>
+        - "</b></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - " <fontsize=12><color=0xFFFFFFCC><b>"
+        - " <fontsize=12><color=0xFFFFFFFF><b>"
       - - state
         - 1
       - - type
         - pilot name
   - - ship name
     - - - post
-        - </i></color></fontsize>
+        - "</i></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - "<fontsize=12><color=0xFFFFFFCC><i> - "
+        - " <fontsize=11><color=0xFFFFFFCC><i>"
       - - state
         - 0
       - - type
         - ship name
   - - ship type
     - - - post
-        - </u></b></color></fontsize>
+        - "</u></b></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - <fontsize=14><color=0xFFFFCC66><b><u>
+        - " <fontsize=14><color=0xFFFFCC66><b><u>"
       - - state
         - 1
       - - type
