--- a/WC总览/总览目标包.yaml
+++ b/WC总览/总览目标包.yaml
@@ -1,25 +1,25 @@
 backgroundOrder:
-  - 13
-  - 44
-  - 52
   - 11
   - 12
   - 14
   - 15
   - 16
   - 45
-  - 49
-  - 19
-  - 18
-  - 9
+  - 13
+  - 44
+  - 52
   - 51
+  - 9
   - 50
   - 53
+  - 19
+  - 18
+  - 49
   - 10
-  - 20
-  - 21
   - 17
+  - 20
   - 48
+  - 21
   - 66
 backgroundStates:
   - 9
@@ -59,25 +59,25 @@ columnOrder:
   - TRANSVERSALVELOCITY
   - ANGULARVELOCITY
 flagOrder:
-  - 13
-  - 44
-  - 52
   - 11
   - 12
   - 14
   - 15
   - 16
   - 45
-  - 9
+  - 13
+  - 44
+  - 52
   - 51
+  - 9
   - 50
   - 53
   - 19
   - 18
+  - 49
   - 10
   - 17
   - 48
-  - 49
   - 21
   - 20
   - 66
@@ -262,7 +262,7 @@ presets:
           - 90
           - 863
           - 864
-  - - <color=0xFFFFFF66>✜ 目标：拦截</color>
+  - - <color=0xFFFFFF66>✜ 目标：轻拦/重拦</color>
     - - - filteredStates
         - - 11
           - 12
@@ -458,7 +458,7 @@ presets:
           - 90
           - 863
           - 864
-  - - <color=0xFFFFFF66>✜ 目标：移动反诱导 (!)</color>
+  - - <color=0xFFFFFF66>✜ 目标：移动反诱导（!）</color>
     - - - alwaysShownStates
         - []
       - - filteredStates
@@ -475,7 +475,7 @@ presets:
           - 1274
           - 1297
           - 1312
-  - - <color=0xFFFFFF66>✜ 目标：隐轰 (!)</color>
+  - - <color=0xFFFFFF66>✜ 目标：隐轰（!）</color>
     - - - alwaysShownStates
         - []
       - - filteredStates
@@ -491,7 +491,7 @@ presets:
           - 834
           - 863
           - 864
-  - - <color=0xFFFFFF66>✜ 目标：后勤航</color>
+  - - <color=0xFFFFFF66>✜ 目标：FAX</color>
     - - - alwaysShownStates
         - []
       - - filteredStates
@@ -510,6 +510,7 @@ presets:
 shipLabelOrder:
   - ship type
   - alliance
+  - linebreak
   - corporation
   - pilot name
   - ship name
@@ -536,7 +537,7 @@ shipLabels:
         - false
   - - alliance
     - - - post
-        - "]</color></fontsize>"
+        - "]</color></fontsize><color=0xFFFF6600>"
       - - pre
         - " <fontsize=14><color=0xFFCCCC33>["
       - - state
@@ -545,36 +546,55 @@ shipLabels:
         - alliance
   - - corporation
     - - - post
-        - "]</b></color></fontsize>"
+        - "]</b></color></fontsize><color=0xFFFF6600>"
       - - pre
         - " <fontsize=12><color=0xFFFFFFCC><b>["
       - - state
         - 1
       - - type
         - corporation
+  - - linebreak
+    - - - bold
+        - false
+      - - color
+        - null
+      - - fontsize
+        - null
+      - - italic
+        - false
+      - - post
+        - null
+      - - pre
+        - null
+      - - state
+        - null
+      - - type
+        - linebreak
+      - - underline
+        - false
   - - pilot name
     - - - post
-        - </b></color></fontsize><color=0xFFFF6600>
+        - "</b></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - " <fontsize=12><color=0xFFFFFFCC><b>"
+        - " <fontsize=12><color=0xFFFFFFFF><b>"
       - - state
         - 1
       - - type
         - pilot name
   - - ship name
     - - - post
-        - </i></color></fontsize>
+        - "</i></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - "<fontsize=12><color=0xFFFFFFCC><i> - "
+        - " <fontsize=11><color=0xFFFFFFCC><i>"
       - - state
         - 0
       - - type
         - ship name
   - - ship type
     - - - post
-        - </u></b></color></fontsize>
+        - "</u></b></color></fontsize><color=0xFFFF6600>"
       - - pre
-        - <fontsize=14><color=0xFFFFCC66><b><u>
+        - " <fontsize=14><color=0xFFFFCC66><b><u>"
       - - state
         - 1
       - - type
