--- a/WC总览/总览生产包.yaml
+++ b/WC总览/总览生产包.yaml
@@ -49,15 +49,15 @@ columnOrder:
   - DISTANCE
   - NAME
   - TYPE
+  - VELOCITY
+  - RADIALVELOCITY
+  - TRANSVERSALVELOCITY
+  - ANGULARVELOCITY
   - ALLIANCE
   - CORPORATION
   - FACTION
   - MILITIA
   - SIZE
-  - VELOCITY
-  - RADIALVELOCITY
-  - TRANSVERSALVELOCITY
-  - ANGULARVELOCITY
 flagOrder:
   - 11
   - 12
@@ -105,12 +105,9 @@ flagStates:
   - 53
 overviewColumns:
   - ALLIANCE
-  - ANGULARVELOCITY
-  - CORPORATION
   - DISTANCE
   - ICON
   - NAME
-  - TRANSVERSALVELOCITY
   - TYPE
   - VELOCITY
 presets:
@@ -1969,16 +1966,11 @@ presets:
           - 1878
           - 1879
           - 1880
-          - 1884
           - 1895
           - 1896
           - 1909
           - 1911
           - 1915
-          - 1920
-          - 1921
-          - 1922
-          - 1923
           - 1925
           - 1926
           - 1927
@@ -2005,8 +1997,14 @@ presets:
           - 4053
           - 4088
           - 4093
+          - 4094
           - 4107
           - 4137
+          - 4161
+          - 4513
+          - 4514
+          - 4515
+          - 4516
   - - <color=0xFF33FFFF>☭ 生产：挖矿（月矿）</color>
     - - - alwaysShownStates
         - []
@@ -2443,7 +2441,6 @@ presets:
           - 2001
           - 2009
           - 2020
-          - 2024
           - 4028
           - 4034
           - 4035
@@ -3835,8 +3832,8 @@ tabSetup:
       - - color
         - null
       - - name
-        - " <fontsize=12><color=0xFF66CCFF><b> 凛冬总览生产包加载完成! </b></color></fontsize>
-          <fontsize=12><color=0xFFFF6666><b> •请加载凛冬总览友军包 </b></color></fontsize>"
+        - "<fontsize=12><color=0xFF66CCFF><b> •凛冬总览生产包加载完成！</b></color></fontsize>\n
+          <fontsize=12><color=0xFFFF6666><b>•请加载凛冬总览友军包</b></color></fontsize>"
       - - overview
         - null
 userSettings: []
