--- a/WC总览/总览目标包.yaml
+++ b/WC总览/总览目标包.yaml
@@ -49,15 +49,15 @@ columnOrder:
   - DISTANCE
   - NAME
   - TYPE
+  - VELOCITY
+  - RADIALVELOCITY
+  - TRANSVERSALVELOCITY
+  - ANGULARVELOCITY
   - ALLIANCE
   - CORPORATION
   - FACTION
   - MILITIA
   - SIZE
-  - VELOCITY
-  - RADIALVELOCITY
-  - TRANSVERSALVELOCITY
-  - ANGULARVELOCITY
 flagOrder:
   - 11
   - 12
@@ -105,12 +105,9 @@ flagStates:
   - 53
 overviewColumns:
   - ALLIANCE
-  - ANGULARVELOCITY
-  - CORPORATION
   - DISTANCE
   - ICON
   - NAME
-  - TRANSVERSALVELOCITY
   - TYPE
   - VELOCITY
 presets:
@@ -654,8 +651,8 @@ tabSetup:
       - - color
         - null
       - - name
-        - "<fontsize=12><color=0xFF66CCFF><b> 凛冬总览目标包加载完成! </b></color></fontsize>
-          <fontsize=12><color=0xFFFF6666><b> •最后请加载凛冬总览框架 </b></color></fontsize> "
+        - "<fontsize=12><color=0xFF66CCFF><b> •凛冬总览目标包加载完成！</b></color></fontsize>\n
+          <fontsize=12><color=0xFFFF6666><b>•最后请加载凛冬总览框架</b></color></fontsize>"
       - - overview
         - null
 userSettings: []
